--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,18 +10,16 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: yarn
 
       - name: Install deps
-        run: yarn install
+        run: npm ci
 
       - name: Build all
-        run: yarn tsc --build
+        run: npm run build
 
       - name: Generate dist output
         run: node .github/scripts/generate-dist.js
