feat(jwt): add package

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"packages/*"
 	],
 	"devDependencies": {
-		"typescript": "^5.3.0",
-		"jq": "^1.6"
+		"@types/node": "^22.14.0",
+		"jq": "^1.6",
+		"typescript": "^5.3.0"
 	}
 }
