--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,3 +46,5 @@ jobs:
 
       - name: Deploy to pkg dist branch
         run: node .github/scripts/deploy-dist.js
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
