fix(jwt): rename package from ts-shared-jwt to wts-jwt

--- a/packages/jwt/package.json
+++ b/packages/jwt/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@wxn0brp/ts-shared-jwt",
+	"name": "@wxn0brp/wts-jwt",
 	"version": "0.0.1",
 	"main": "index.js",
 	"author": "wxn0brP",
