feat(build): enhance build process with tsc-alias for path resolution

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,9 @@
     "include": [
         "packages",
         "index.ts"
-    ]
+    ],
+    "tsc-alias": {
+        "resolveFullPaths": true,
+        "verbose": false
+    }
 }
