--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"license": "MIT",
 	"private": true,
 	"scripts": {
-		"build": "npx tsc"
+		"build": "npx tsc && npx tsc-alias"
 	},
 	"workspaces": [
 		"packages/*"
@@ -15,5 +15,8 @@
 		"@types/node": "^22.14.0",
 		"jq": "^1.6",
 		"typescript": "^5.3.0"
+	},
+	"dependencies": {
+		"tsc-alias": "^1.8.15"
 	}
 }
