--- a/package.json
+++ b/package.json
@@ -12,11 +12,8 @@
 		"packages/*"
 	],
 	"devDependencies": {
-		"@types/node": "^24.0.3",
-		"jq": "^1.7.2",
-		"typescript": "^5.8.3"
-	},
-	"dependencies": {
-		"tsc-alias": "^1.8.16"
+		"@types/node": "*",
+		"tsc-alias": "*",
+		"typescript": "*"
 	}
 }
