--- a/packages/jwt/package.json
+++ b/packages/jwt/package.json
@@ -9,10 +9,10 @@
 		"jose": "^5.10.0"
 	},
 	"peerDependencies": {
-		"@wxn0brp/db": ">=0.9.1"
+		"@wxn0brp/db-core": ">=0.2.3"
 	},
 	"devDependencies": {
-		"@wxn0brp/db": ">=0.9.1",
+		"@wxn0brp/db-core": ">=0.2.3",
 		"@types/node": "^22.14.0",
 		"typescript": "^5.2.2"
 	}
