--- a/packages/valthera-diff/package.json
+++ b/packages/valthera-diff/package.json
@@ -7,10 +7,10 @@
 	"private": true,
 	"dependencies": {},
 	"peerDependencies": {
-		"@wxn0brp/db": ">=0.9.1"
+		"@wxn0brp/db-core": ">=0.2.3"
 	},
 	"devDependencies": {
-		"@wxn0brp/db": ">=0.9.1",
+		"@wxn0brp/db-core": ">=0.2.3",
 		"@types/node": "^22.14.0",
 		"typescript": "^5.2.2"
 	}
