chore: bump deps

--- a/packages/valthera-diff/package.json
+++ b/packages/valthera-diff/package.json
@@ -7,11 +7,11 @@
 	"private": true,
 	"dependencies": {},
 	"peerDependencies": {
-		"@wxn0brp/db-core": ">=0.2.3"
+		"@wxn0brp/db-core": ">=0.3.0"
 	},
 	"devDependencies": {
-		"@wxn0brp/db-core": ">=0.2.3",
-		"@types/node": "^22.14.0",
-		"typescript": "^5.2.2"
+		"@wxn0brp/db-core": ">=0.3.0",
+		"@types/node": "*",
+		"typescript": "*"
 	}
 }
