--- a/packages/jwt/package.json
+++ b/packages/jwt/package.json
@@ -9,11 +9,11 @@
 		"jose": "^5.10.0"
 	},
 	"peerDependencies": {
-		"@wxn0brp/db-core": ">=0.2.3"
+		"@wxn0brp/db-core": ">=0.3.0"
 	},
 	"devDependencies": {
-		"@wxn0brp/db-core": ">=0.2.3",
-		"@types/node": "^22.14.0",
-		"typescript": "^5.2.2"
+		"@wxn0brp/db-core": ">=0.3.0",
+		"@types/node": "*",
+		"typescript": "*"
 	}
 }
